<resources>
    <string name="app_name">Aeolus</string>
    <string name="rationale_location">\tAeolus needs this permission to help pressure measurements from your device improve weather forecasts.</string>
    <string name="plot_title">Sensor Pressure</string>
    <string name="live_pressure">%1$s (%2$s)</string>
    <string name="action_realtime">Home</string>
    <string name="action_history">Charts</string>
    <string name="action_preslog">Pressure Log</string>
    <string name="action_dplog">Pressure Change Log</string>
    <string name="action_settings">Settings</string>
    <string name="ErrorMsgPres">Sorry, your device does not have a Barometer :(</string>
    <string name="allpressures">All Pressures</string>
    <string name="pressure_log_title">Pressure Log (%1$s) </string>
    <string name="dp_log_title">Pressure Change Log (%1$s) </string>
    <string name="latestpressures">Latest Pressures</string>
    <string name="cview">Chart View Options</string>
    <string name="pres1_title">Smartphone Pressures (%1$s)</string>
    <string name="freqsummary">Select how often you\'d like to submit pressure observations.</string>
    <string name="freqtitle">Submission Frequency</string>
    <string name="freqexpl">15 minutes is the default submission frequency. This frequency is ideal as it conserves battery life and provides scientist with frequent data crucial for short-term forecasting</string>

    <string name="pdefault">hPa</string>
    <string name="never_show_again">Never show again.</string>
    <string name="logo">Logo</string>
    <string-array name="presArray">
        <item>inHg</item>
        <item>mmHg</item>
        <item>psi</item>
        <item>kPa</item>
        <item>hPa</item>
    </string-array>
    <string-array name="presValues">
        <item>inHg</item>
        <item>mmHg</item>
        <item>psi</item>
        <item>kPa</item>
        <item>hPa</item>
    </string-array>

</resources>
