<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/pressure_plots">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/header_image"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/ErrorMsgPres" />
                    <TextView
                        android:id="@+id/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_toEndOf="@id/header_image"
                        android:layout_centerInParent="true"
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/chartViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cview"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chartViewTitle"
                android:gravity="center"
                android:id="@+id/linlayout2">
                <Button
                    android:id="@+id/latestpressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latestpressures"
                    android:textSize="@dimen/headers"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:gravity="center|center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
                <Button
                    android:id="@+id/allpressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allpressures"
                    android:textSize="@dimen/headers"
                    android:gravity="center|center_horizontal"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/pres1Title"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linlayout2"
                android:gravity="center_horizontal"
                android:text="@string/pres1_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                />
            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/pres1"
                android:layout_width="match_parent"
                android:layout_below="@+id/pres1Title"
                android:layout_height="350dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>