<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/header_image"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_toEndOf="@id/header_image"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/livepressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:text="@string/plot_title"
        android:textColor="@color/black"
        android:textSize="@dimen/ptitle"
        android:layout_margin="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/sensorval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/livepressure"
        android:gravity="center_horizontal"
        android:text="@string/live_pressure"
        android:textColor="@color/black"
        android:textSize="@dimen/headers"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/pres1"
        android:layout_width="match_parent"
        android:layout_below="@+id/livepressure"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"/>

</RelativeLayout>