<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/database_viewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/header_image"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/logo" />
                    <TextView
                        android:id="@+id/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_toEndOf="@id/header_image"
                        android:layout_centerInParent="true"
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/dbtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_below="@+id/toolbar"
                android:gravity="center_horizontal"
                android:text="@string/pressure_log_title"
                android:textColor="@color/black"
                android:textSize="@dimen/headers"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                />
            <HorizontalScrollView
                android:id="@+id/horizontalView"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal|vertical"
                android:layout_width="wrap_content"
                android:layout_below="@id/dbtitle1"
                android:layout_marginTop="5dip">
                <TableLayout
                    android:id= "@+id/tablelayout"
                    android:layout_width= "wrap_content"
                    android:layout_height= "match_parent"
                    android:stretchColumns="*">
                </TableLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>